external-crates/move/crates/move-compiler/tests/move_check/parser/function_incomplete.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_incomplete.move:6:5
  │
6 │     fun just_type_args<T>
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '('

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_incomplete.move:8:5
  │
8 │     fun just_param<T>(_u: u64)
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '('

